# nbdefense-jupyter

./: .copier-answers.yml  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue-report.md  feature_request.md
.github/workflows/: build.yml  publish.yml  test.yml
jupyter-config/nb-config/: nbdefense_jupyter.json
jupyter-config/server-config/: nbdefense_jupyter.json
nbdefense_jupyter/: __init__.py  _version.py  handlers.py
schema/: plugin.json
src/: constants.ts  handler.ts  index.ts  types.ts
src/components/: CellErrorDropdown.tsx  CurrentScanPath.tsx  DirtyStateWarning.tsx  ErrorMessage.tsx  KernelTracker.tsx  LastUpdatedTime.tsx  MessageBox.tsx  NBDefenseHeader.tsx  NBDefensePanel.tsx  NoIssuesFound.tsx  ScanButton.tsx  ScanResult.tsx  ScanResults.tsx
src/extensions/: ButtonExtension.ts  SwitchExtension.ts
src/hooks/: useCurrentKernel.ts  useCurrentNotebook.ts  useScanResults.ts
src/style/: CellErrorDropdownStyle.ts  DirtyScanStyle.ts  ErrorMessageStyle.ts  FullScanPathStyle.ts  HeaderStyle.ts  KernelTrackerStyle.ts  MessageBoxStyle.ts  NBDefensePanelStyle.ts  NBDefenseWidgetStyle.ts  NoIssuesFound.ts  ScanButtonStyle.ts  ScanResultStyle.ts  ScanResultsStyle.ts  icons.ts
src/utils/: editorErrorsUtils.spec.tsx  editorErrorsUtils.tsx  issueUtils.ts  scanSettingUtils.spec.tsx  scanSettingUtils.ts  timeUtils.spec.ts  timeUtils.ts
src/widgets/: NBDefenseWidget.tsx
style/: base.css
